// Irrigation proto file 
syntax = "proto3";

package irrigation;

service IrrigationService {
  rpc GetSoilMoisture (IrrigationRequest) returns (SoilMoistureResponse);
  rpc StartIrrigation (IrrigationRequest) returns (IrrigationResponse);
  rpc StopIrrigation (IrrigationRequest) returns (IrrigationResponse);
  rpc GetWaterUsage (IrrigationRequest) returns (WaterUsageResponse);
}

message IrrigationRequest {
  string greenhouseId = 1;
}

message SoilMoistureResponse {
  float moistureLevel = 1;
}

message IrrigationResponse {
  string status = 1; // e.g., "Started", "Already Running", "Stopped"
}

message WaterUsageResponse {
  float litresUsed = 1;
}