// Weather proto file 
syntax = "proto3";

package weather;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string location = 1;
}

message WeatherResponse {
  float temperature = 1;
  float humidity = 2;
  float rainfall = 3;
}